@@ -1,0 +1,9 @@
+Title: Fixed wrong filters in Eventviews linked by Tactical Overview
+Level: 1
+Component: multisite
+Compatible: compat
+Version: 1.4.0i3p1
+Date: 1484748386
+Class: fix
+
+
